<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GymApp</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings_d">Settings_d</string>





    <string name="appName">SwipeListView Demo</string>
    <string name="open">Open</string>
    <string name="googlePlay">Google Play</string>
    <string name="uninstall">Uninstall</string>

    <string name="cantOpen">Can\'t open this application</string>
    <string name="settings">Impostazioni</string>
    <string name="notiche">Notiche Allenamento</string>
    <string name="timer">Attiva timer riposo</string>
    <string name="allarme">Allarme</string>
    <string name="attivo">Rimani attivo</string>
    <string name="sincronizza">Sincronizza ora</string>
    <string name="elimina">Elimina storico allenamenti</string>
    <string name="avatar">Imposta avatar</string>
    <string name="disconnetti">Disconnetti</string>

    <string name="about">About</string>
    <string name="aboutMessage">This is just a simple demo for the Open Source SwipeListView Android Library by 47 Degrees. Find all source, documentation and packaged downloads at GitHub. Cheers!</string>
    <string name="ok">Ok</string>



    <string name="dontShow">Don\'t show this message again</string>
    <string name="others">Others</string>

    <string name="loading">Loading</string>

    <string name="newTag">New!</string>
    <string name="discard">Salta</string>



    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="connesso">Rimani Connesso</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>





    <string name="nuova_stringa">nuova_stringa</string>


</resources>
